alignment fixed
Former-commit-id: ea6298304ec35a29ade5720a02a7d8abc6aed268

--- a/Carme-Frontend/Carme-Django/static/css/style.css
+++ b/Carme-Frontend/Carme-Django/static/css/style.css
@@ -14,14 +14,17 @@
 .text-success{
   color:var(--carme-success)!important;
 }
-.text-info{
-  color:var(--carme-info)!important;
+.text-disabled{
+  color:var(--carme-disabled)!important;
 }
 .text-warning{
   color:var(--carme-warning)!important;
 }
 .text-danger{
   color:var(--carme-danger)!important;
+}
+.text-info{
+  color:var(--carme-info)!important;
 }
 .text-light{
   color:var(--carme-light)!important;
